Fix Overlapping Text

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", CQkAdOepuj
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   }
